src/ui/snapshots/rusty_riff__ui__draw__tests__ir_browser_modal.snap
---
source: src/ui/draw.rs
expression: text
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ] move┐
│  AMP ──▶ CAB ──▶ OUTPUT                                                                                              IN uncal▐░░░░░▌          OUT ▐░░░░░░░░░▌          │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏┤ MARSHALL PLEXI ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MARSH GB ├┓
┃                                                                                                                     ┃┃                                                 ┃
┃         ···                ···                 ···                ···                 ··◇                ◇··        ┃┃       ◇··             ···              ···      ┃
┃        · ● ◇              · ● ·               · ● ·              · ● ·               · ● ·              · ● ·       ┃┃      · ● ·           · ● ·            · ● ·     ┃
┃         · ·                ◇ ·                 · ◇                ◇ ·                 · ·                · ·        ┃┃       · ·             ◇ ·              ◇ ·      ┃
┃     VOL II 7.5          VOL I 0.╔ C A B I N E T   I R s ═════════════════════════════════════════════════════════════════════════════╗    BLEND 0.0        ROOM 0.0    ┃
┃                                 ║▶ Built-in cabs (no IR)                                                                             ║                                 ┃
┃                                 ║  (no .wav IRs found — drop files in ./irs or ~/.config/rusty-riff/irs)                             ║                                 ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚║                                                                                                    ║▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━║                                                                                                    ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ─────────────────────║                                                                                                    ║─────────────────────────────────┐
│┌ + ADD ─────────────────────────║                                                                                                    ║────────────────────────────────┐│
││                                ║                                                                                                    ║                                ││
│└────────────────────────────────║                                                                                                    ║────────────────────────────────┘│
││├───────────────────────────────║                                                                                                    ║───────────────────────────────┤││
││SELECT A PEDAL — ←→             ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
│└────────────────────────────────║                                                                                                    ║────────────────────────────────┘│
└─────────────────────────────────║                                                                                                    ║─────────────────────────────────┘
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                        ↑/↓ navigate  Enter load/clear  X A/B  Esc / I close                        ║                                  
                                  ║                                 no IR loaded — using built-in cabs                                 ║                                  
                                  ╚════════════════════════════════════════════════════════════════════════════════════════════════════╝
