src/ui/snapshots/rusty_riff__ui__draw__tests__plugin_browser_modal.snap
---
source: src/ui/draw.rs
expression: text
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ] move┐
│  AMP ──▶ CAB ──▶ OUTPUT                                                                                  MASTER +0.0 IN uncal▐░░░░░▌          OUT ▐░░░░░▌LIM           │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏┤ MARSHALL PLEXI ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MARSH GB ├┓
┃                                                                                                                     ┃┃                                                 ┃
┃         ···                ···                 ···                ···                 ··◇                ◇··        ┃┃       ◇··             ···              ···      ┃
┃        · ● ◇              · ● ·               · ● ·              · ● ·               · ● ·              · ● ·       ┃┃      · ● ·           · ● ·            · ● ·     ┃
┃         · ·                ◇ ·                 · ◇                ◇ ·                 · ·                · ·        ┃┃       · ·             ◇ ·              ◇ ·      ┃
┃     VOL II 7.5          VOL I 0.╔ C L A P   P L U G I N S ═══════════════════════════════════════════════════════════════════════════╗    BLEND 0.0        ROOM 0.0    ┃
┃                                 ║▶ None — bypass insert                                                                              ║                                 ┃
┃                                 ║  (no CLAP plugins found in the standard locations)                                                 ║                                 ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚║                                                                                                    ║▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━║                                                                                                    ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ─────────────────────║                                                                                                    ║─────────────────────────────────┐
│┌ + ADD ─────────────────────────║                                                                                                    ║────────────────────────────────┐│
││                                ║                                                                                                    ║                                ││
│└────────────────────────────────║                                                                                                    ║────────────────────────────────┘│
││├───────────────────────────────║                                                                                                    ║───────────────────────────────┤││
││SELECT A PEDAL — ←→             ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
│└────────────────────────────────║                                                                                                    ║────────────────────────────────┘│
└─────────────────────────────────║                                                                                                    ║─────────────────────────────────┘
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                      ↑/↓ navigate  Enter load/clear  Tab params  Esc / V close                     ║                                  
                                  ║                                          no plugin loaded                                          ║                                  
                                  ╚════════════════════════════════════════════════════════════════════════════════════════════════════╝
