src/ui/snapshots/rusty_riff__ui__draw__tests__preset_modal.snap
---
source: src/ui/draw.rs
expression: text
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ] move┐
│  AMP ──▶ CAB                                                                              ──▶ MASTER +0.0 ──▶ OUTPUT IN uncal▐░░░░░▌          OUT ▐░░░░░▌LIM           │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏┤ MARSHALL PLEXI ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MARSH GB ├┓
┃                                                                                                                     ┃┃                                                 ┃
┃         ···                ···                 ···                ···                 ··◇                ◇··        ┃┃       ◇··             ···              ···      ┃
┃        · ● ◇              · ● ·               · ● ·              · ● ·               · ● ·              · ● ·       ┃┃      · ● ·           · ● ·            · ● ·     ┃
┃         · ·                ◇ ·                 · ◇                ◇ ·                 · ·                · ·        ┃┃       · ·             ◇ ·              ◇ ·      ┃
┃     VOL II 7.5          VOL I 0.╔ P R E S E T S ═════════════════════════════════════════════════════════════════════════════════════╗    BLEND 0.0        ROOM 0.0    ┃
┃                                 ║    Default values                                                                                  ║                                 ┃
┃                                 ║    Clean Combo  sparkly cleans                                                                     ║                                 ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚║  ▶ My Lead  saved rig  [user]                                                                      ║▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━║                                                                                                    ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ─────────────────────║                                                                                                    ║─────────────────────────────────┐
│┌ + ADD ─────────────────────────║                                                                                                    ║────────────────────────────────┐│
││                                ║                                                                                                    ║                                ││
│└────────────────────────────────║                                                                                                    ║────────────────────────────────┘│
││├───────────────────────────────║                                                                                                    ║───────────────────────────────┤││
││SELECT A PEDAL — ←→             ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
│└────────────────────────────────║                                                                                                    ║────────────────────────────────┘│
└─────────────────────────────────║                                                                                                    ║─────────────────────────────────┘
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║↑/↓ navigate  / search  Enter apply  S save  E export  I import  F favorite  X A/B  D delete  Esc / ║                                  
                                  ║                                            ● user preset                                           ║                                  
                                  ╚════════════════════════════════════════════════════════════════════════════════════════════════════╝
